--- a/public_html/index.html
+++ b/public_html/index.html
@@ -121,6 +121,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/Arena.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/WASDObj.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
         <script type="text/javascript" src="src/MyGame/TacoDemo.js"></script>
         
         
