Created Patrol Obj
Patrol object goes back and forth over the first platform. Running the hero into it sideways causes damage.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -123,6 +123,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Cannon.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Patrol.js"></script>
         <script type="text/javascript" src="src/MyGame/TacoDemo.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/ObjectShake.js"></script>
         
