Fixed Hero z value
Fixed hero's z value so his transparency doesn't override everything within his bounds.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> TODO </title>
+        <title> Adventures of Kelvin </title>
         <link rel ="icon" type ="image/x-icon" href="./assets/favicon.png">
 
         <!-- the following says there are javascript source code contained in 
