--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> TODO </title>
-        <link rel ="icon" type ="image/x-icon" href="./assets/favicon.png">
+        <title> TACO DEMO </title>
+        <link rel ="icon" type ="image/x-icon" href="./assets/Taco/taco.png">
 
         <!-- the following says there are javascript source code contained in 
              the external source files
@@ -124,6 +124,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Cannon.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Patrol.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/StoryPanel.js"></script>
         <script type="text/javascript" src="src/MyGame/TacoDemo.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/ObjectShake.js"></script>
         
