Added story panel

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-<<<<<<< HEAD
-        <title> TACO DEMO </title>
+        <title> Adventures of Kelvin Demo</title>
         <link rel ="icon" type ="image/x-icon" href="./assets/Taco/taco.png">
-=======
-        <title> Adventures of Kelvin </title>
-        <link rel ="icon" type ="image/x-icon" href="./assets/favicon.png">
->>>>>>> dc232c423e69aece6dc0086cfa41d31fe4af6b78
 
         <!-- the following says there are javascript source code contained in 
              the external source files
