Added healing powerup + changed damage
Powerup can heal the hero when he picks it up, and he only picks it up if he isn't at max hp. The powerup respawns after 5 seconds.
Also changed hero.tookDamage to take an int and deal the int's worth of damage to him (so different enemies/projectiles deal diff damage).

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -122,6 +122,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/WASDObj.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Minion.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Powerup.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Patrol.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Cannon.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Projectile.js"></script>
