--- a/public_html/index.html
+++ b/public_html/index.html
@@ -129,6 +129,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/HomingProjectile.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/StoryPanel.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/ObjectShake.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/CodeMechanism.js"></script>
         <script type="text/javascript" src="src/MyGame/TacoDemo.js"></script>
         <script type="text/javascript" src="src/MyGame/WinScene.js"></script>
         <script type="text/javascript" src="src/MyGame/LoseScene.js"></script>
