Added scene from json support
as of rn only, cameras, patrol, cannon, flier, powerup, sceneBG, storyPanels

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -132,6 +132,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/ObjectShake.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/CodeMechanism.js"></script>
         <script type="text/javascript" src="src/MyGame/TacoDemo.js"></script>
+        <script type="text/javascript" src="src/MyGame/DemoScene.js"></script>
         <script type="text/javascript" src="src/MyGame/WinScene.js"></script>
         <script type="text/javascript" src="src/MyGame/LoseScene.js"></script>
            
