Added new enemy: smasher
Essentially a thwomp from super mario

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -127,6 +127,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/Cannon.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Projectile.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Flier.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Smasher.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/HomingProjectile.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/StoryPanel.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/ObjectShake.js"></script>
