--- a/public_html/index.html
+++ b/public_html/index.html
@@ -116,6 +116,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/WASDObj.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Hero.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Powerup.js"></script>
+        <script type="text/javascript" src="src/MyGame/Objects/Coin.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Patrol.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Cannon.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/Projectile.js"></script>
