--- a/public_html/index.html
+++ b/public_html/index.html
@@ -127,7 +127,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/ObjectShake.js"></script>
         <script type="text/javascript" src="src/MyGame/Objects/CodeMechanism.js"></script>
         <script type="text/javascript" src="src/MyGame/TacoDemo.js"></script>
-        <script type="text/javascript" src="src/MyGame/DemoScene.js"></script>
+        <script type="text/javascript" src="src/MyGame/GameScene.js"></script>
         <script type="text/javascript" src="src/MyGame/WinScene.js"></script>
         <script type="text/javascript" src="src/MyGame/LoseScene.js"></script>
            
