Made a separate file for gameMethods
since the main file is getting stuffy

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -128,6 +128,7 @@
         <script type="text/javascript" src="src/MyGame/Objects/CodeMechanism.js"></script>
         <script type="text/javascript" src="src/MyGame/TacoDemo.js"></script>
         <script type="text/javascript" src="src/MyGame/GameScene.js"></script>
+        <script type="text/javascript" src="src/MyGame/GameSceneMethods.js"></script>
         <script type="text/javascript" src="src/MyGame/WinScene.js"></script>
         <script type="text/javascript" src="src/MyGame/LoseScene.js"></script>
            
