Add second level scene

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -132,6 +132,7 @@
         <script type="text/javascript" src="src/MyGame/WinScene.js"></script>
         <script type="text/javascript" src="src/MyGame/LoseScene.js"></script>
         <script type="text/javascript" src="src/MyGame/Level1Scene.js"></script>
+        <script type="text/javascript" src="src/MyGame/Level2Scene.js"></script>
         
            
 <link rel="stylesheet" type="text/css" href="LoadingIcons.css">
