--- a/public_html/index.html
+++ b/public_html/index.html
@@ -152,64 +152,26 @@
         <script type="text/javascript"> gEngine.LoadingIconConfig.setup(); </script>
         </div>
         <div id="particle" style="display: none">
-            <div>Use Left/Right buttons to select which object to manipulate</div>
+            <div>Instruction on Controls</div>
         <table>
           <tr>
             <th>Controls</th>
             <th>Description</th> 
-            <th>Value</th>
           </tr>
           <tr>
-            <td>Q/W</td>
-            <td>Width of the object +/-</td>
-            <td><bdi id="value1"></bdi></td>
+            <td>A/D</td>
+            <td>Move Left/Move Right</td>
           </tr>
           <tr>
-            <td>A/S</td>
-            <td>Vertical Acceleration of Particles +/-</td>
-            <td><bdi id="value2"></bdi></td>
+            <td>Space/S</td>
+            <td>Jump/Stomp</td>
           </tr>
           <tr>
-              <td>Z/X</td>
-              <td>Life of the Particles +/-</td>
-              <td><bdi id="value3"></bdi></td>
-          </tr>
-          <tr>
-            <td>E/R</td>
-            <td>Setting the Horizontal initial boost of the Particles +/-</td>
-            <td><bdi id="value4"></bdi></td>
-          </tr>
-          <tr>
-            <td>D/F</td>
-            <td>Setting the Vertical initial boost of the Particles +/-</td>
-            <td><bdi id="value5"></bdi></td>
-          </tr>
-          <tr>
-            <td>C/V</td>
-            <td>What the particle size is multiplied by every update +/-</td>
-            <td><bdi id="value6"></bdi></td>
-          </tr>
-          <tr>
-            <td>T/Y</td>
-            <td>How many particles are spawned per update cycle +/-</td>
-            <td><bdi id="value7"></bdi></td>
-          </tr>
-          <tr>
-            <td>G/H</td>
-            <td>Horizontal Acceleration of the Particles +/-</td>
-            <td><bdi id="value8"></bdi></td>
-          </tr>
-          <tr>
-            <td>B/N</td>
-            <td>The size of the Particles +/-</td>
-            <td><bdi id="value9"></bdi></td>
-          </tr>
-          <tr>
-            <td>U/I</td>
-            <td>The Maximum Vertical Offset of the Particles +/-</td>
-            <td><bdi id="value10"></bdi></td>
+              <td>I</td>
+              <td>Deflect projectiles if active</td>
           </tr>
         </table>
+
         </div>
         <div id="physics" style="display: none">
             <div style="display: table" >
