Extra Controls in index.html, and Pressed->Click changes
Added the extra controls information to the index.html to show during gameplay.
Changed the jump and deflect extra controls (like w, e, etc.) to be isKeyClicked rather than isKeyPressed.
Also, got rid of the extra wall at the end of level1 since if people want to jump off now, they just go to a spawnpoint.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -156,19 +156,28 @@
         <table>
           <tr>
             <th>Controls</th>
-            <th>Description</th> 
+            <th>Description</th>
+            <th>Controls</th>
           </tr>
           <tr>
             <td>A/D</td>
             <td>Move Left/Move Right</td>
+            <td>Left/Right Arrows</td>
           </tr>
           <tr>
-            <td>Space/S</td>
-            <td>Jump/Stomp</td>
+            <td>Space/W</td>
+            <td>Jump</td>
+            <td>Up Arrow</td>
           </tr>
           <tr>
-              <td>I</td>
+              <td>S</td>
+              <td>Stomp</td>
+              <td>Down Arrow</td>
+          </tr>
+          <tr>
+              <td>Q/E/R</td>
               <td>Deflect projectiles if active</td>
+              <td>Ctrl/Numpad0</td>
           </tr>
         </table>
 
