--- a/public_html/index.html
+++ b/public_html/index.html
@@ -131,6 +131,7 @@
         <script type="text/javascript" src="src/MyGame/GameSceneMethods.js"></script>
         <script type="text/javascript" src="src/MyGame/WinScene.js"></script>
         <script type="text/javascript" src="src/MyGame/LoseScene.js"></script>
+        <script type="text/javascript" src="src/MyGame/LoseScene2.js"></script>
         <script type="text/javascript" src="src/MyGame/Level1Scene.js"></script>
         <script type="text/javascript" src="src/MyGame/Level2Scene.js"></script>
         
@@ -171,13 +172,17 @@
           </tr>
           <tr>
               <td>S</td>
-              <td>Stomp</td>
+              <td>Stomp + Go through (certain) Pipes</td>
               <td>Down Arrow</td>
           </tr>
           <tr>
               <td>Q/E/R</td>
               <td>Deflect projectiles if active</td>
               <td>Ctrl/Numpad0</td>
+          </tr>
+          <tr>
+              <td>Esc</td>
+              <td>Pause/Unpause the game</td>
           </tr>
         </table>
 
